first commicss adjoint

--- a/user_guide_VMs.html
+++ b/user_guide_VMs.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/github.css" media="screen" />
+</head>
+<body>
 <h1>Euca2ools' how to - VM managing</h1>
 
 <p>The purpose of this "how to" is to give the basic tools for managing your own set of virtual machines.
@@ -66,3 +71,5 @@ INSTANCE    i-zzzzzzzz  ami-yyyyyyyy    172.16.212.5    172.16.212.5    running 
 <p>Note that from here one can obtain your instance ID, which is necessary due to "interaction" through the Euca2ools (e.g. save snapshots, stop, start your instance).</p>
 
 <h2>4. "euca-{start,stop}-instances" Start and Stop instances</h2>
+</body>
+</html>
