Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.  On branch master  Changes to be committed:    (use "git reset HEAD <file>..." to unstage)
	modified:   Makefile
	new file:   admin_guide.html
	new file:   admin_guide.md
	modified:   index.html
	modified:   index.md

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    old/index.html
	deleted:    old/index.md
	deleted:    old/user_guide_VMs.html
	deleted:    old/user_guide_elastic_IP.html

--- a/admin_guide.html
+++ b/admin_guide.html
@@ -308,11 +308,16 @@
   </style>
 </head>
 <body>
-<h1 id="main-menu">Main Menu</h1>
-<ol style="list-style-type: decimal">
-<li><a href="user_guide_VMs.html">Euca2ools’ how to - VM managing</a></li>
-<li><a href="user_guide_elastic_IP.html">Euca2ools’ how to - Elastic IP configuration</a></li>
-<li><a href="admin_guide.html">Euca2ools’ how to - Admin’s reference</a></li>
-</ol>
+<div id="TOC">
+<ul>
+<li><a href="#euca2ools-how-to---admins-reference"><span class="toc-section-number">3</span> Euca2ools’ how to - Admin’s reference</a></li>
+</ul>
+</div>
+<h1 id="euca2ools-how-to---admins-reference"><a href="#euca2ools-how-to---admins-reference"><span class="header-section-number">3</span> Euca2ools’ how to - Admin’s reference</a></h1>
+<p>The purpose of this “how to” is to give the basic tools for managing your cloud using the a small set if custom scripts and the Euca2ools, an open source implementation of EC2 Amazon’s tools. For a more complete documentation see also:</p>
+<ul>
+<li><a href="http://www.eucalyptus.com/docs/eucalyptus/3.3/console-guide/" title="Eucaliptus User Guide">This Guide</a></li>
+<li><a href="https://aws.amazon.com/ec2/faqs/" title="Amazon EC2 FAQ">These FAQs</a></li>
+</ul>
 </body>
 </html>
