Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.  On branch master  Changes to be committed:    (use "git reset HEAD <file>..." to unstage)
	modified:   Makefile
	modified:   admin_guide.html
	new file:   cloud-enter.sh
	modified:   index.html
	modified:   index.md
	new file:   user_guide_cloud_enter.html
	new file:   user_guide_cloud_enter.md
	modified:   user_guide_elastic_IP.html
	modified:   user_guide_elastic_IP.md

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    admin_guide.html
	deleted:    index.html
	deleted:    old/index.html
	deleted:    old/index.md
	deleted:    old/user_guide_VMs.html
	deleted:    old/user_guide_elastic_IP.html
	deleted:    user_guide_VMs.html
	deleted:    user_guide_cloud_enter.html
	deleted:    user_guide_elastic_IP.html

--- a/index.html
+++ b/index.html
@@ -310,9 +310,10 @@
 <body>
 <h1 id="main-menu">Main Menu</h1>
 <ol style="list-style-type: decimal">
+<li><a href="admin_guide.html">Euca2ools’ how to - Admin’s reference</a></li>
+<li><a href="user_guide_cloud_enter.html">Euca2ools’ how to - Cloud-enter.sh</a></li>
 <li><a href="user_guide_VMs.html">Euca2ools’ how to - VM managing</a></li>
 <li><a href="user_guide_elastic_IP.html">Euca2ools’ how to - Elastic IP configuration</a></li>
-<li><a href="admin_guide.html">Euca2ools’ how to - Admin’s reference</a></li>
 </ol>
 </body>
 </html>
